# gitlab-jira-tracker

./: .env.example  .gitignore  README.md  config.json  config_loader.py  gitlab_client.py  install.ps1  install.sh  jira_client.py  mr_template.py  pyproject.toml  stack_manager.py  stale_checker.py  time_tracker.py  tracker.py
completions/: _tracker  tracker.bash
hooks/: post-checkout  post-commit
